gitops/locations/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-locations
  labels:
    app: app-locations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-locations
  template:
    metadata:
      labels:
        app: app-locations
    spec:
      containers:
        - name: quarkus-app
          image: quay-quay-image-registry.apps.cluster-vg29h.vg29h.sandbox1619.opentlc.com/imesquit/locations:c1c0c1a1395e65e380ae6e3b6e16be7bd6963643
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
