gitops/locations/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-locations
  labels:
    app: app-locations
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: app-locations
  type: ClusterIP
